Fix files access & stream overflow

--- a/static/css/_general.scss
+++ b/static/css/_general.scss
@@ -32,6 +32,7 @@ pre {
     background: $gray;
     margin: 10px 0;
     color: #fff;
+    white-space: pre-wrap;
 }
 
 
